--- a/app.css
+++ b/app.css
@@ -14,7 +14,9 @@ html {
     margin: 0;
     height: 100%;
     }
-    
+    .destination:hover h2 {
+    transform: rotate(0deg);
+        }
     .container {
     margin: auto;
     padding: 1em;
@@ -30,7 +32,7 @@ html {
     .destination {
     background: #03a9f4;
     box-shadow: 0 1px 9px 0 rgba(0, 0, 0, 0.4);
-    color: white;
+    color: red;
     margin: 0.5em;
     min-height: 200px;
     flex: 0 1 200px;
